# KeePassFIDO2

./: .gitignore  README.md
DeviceCommunicator/: .gitignore  CMakeLists.txt  README.md
DeviceCommunicator/src/: main.cpp
KeePassPlugin/: .gitignore  KeePassFIDO2.csproj  KeePassFIDO2.sln  KeePassFIDO2.sln.DotSettings  README.md  keepass.version
KeePassPlugin/src/: DeviceCommunicator.cs  DeviceCommunicatorData.cs  DeviceCommunicatorResult.cs  FIDO2KeyProvider.cs  FIDO2OptionsForm.Designer.cs  FIDO2OptionsForm.cs  KeePassFIDO2Ext.cs  PinForm.Designer.cs  PinForm.cs
KeePassPlugin/src/Properties/: AssemblyInfo.cs
Thesis/: .gitignore  BP_Kolárik_Martin_2020.tex  mybibliographyfile.bib
Thesis/content/: analysis-and-design.tex  conclusion.tex  implementation.tex  introduction.tex  state-of-the-art.tex  testing.tex
Thesis/glossaries/: acronyms.tex  glossary.tex
Thesis/images/: pgp.drawio  plugin-get.drawio  signature.drawio
